--- a/client/src/components/dashboard/maindashboard/widgets/_widget-calendar.scss
+++ b/client/src/components/dashboard/maindashboard/widgets/_widget-calendar.scss
@@ -91,6 +91,7 @@
 
 .react-calendar__month-view__weekdays {
   margin-top: 12px;
+  margin-bottom: 7px;
   font-size: 9px;
   border: none;
 }
