--- a/client/src/components/dashboard/maindashboard/widgets/_widget-team.scss
+++ b/client/src/components/dashboard/maindashboard/widgets/_widget-team.scss
@@ -1,66 +1,62 @@
 .widget_team_mainbox {
   @include widget-wrapper;
   grid-area: widget_team;
-
+  width: 100%;
+  height: 100%;
   //inside grid
   display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 10% 30% 30% 10% 20%;
-  gap: 0px 0px;
-  grid-template-areas:
-    "team_header_top team_header_top"
-    "team_manager_wrapper team_supervisor_wrapper"
-    "team_it_one team_it_two"
-    "team_header_bottom team_header_bottom"
-    "team_contacts_wrapper team_contacts_wrapper";
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr repeat(2, 3fr) 1fr 2fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
 }
 
 .team_header_top {
-  grid-area: team_header_top;
-  margin: 20px;
+  grid-area: 1 / 1 / 2 / 3;
+  margin: 20px 20px 10px 20px;
   .horizontal_line {
     width: 100%;
     height: 2px;
     background-color: $primary;
-    margin-top: 5px;
   }
   h1 {
-    font-size: 18px;
+    font-size: 16px;
+    margin-bottom: 5px;
   }
 }
 
 .team_header_bottom {
-  grid-area: team_header_bottom;
-  margin: -10px 20px 0px 20px;
+  grid-area: 4 / 1 / 5 / 3;
+  margin: 10px 20px 10px 20px;
   .horizontal_line {
     width: 100%;
     height: 2px;
     background-color: $primary;
-    margin-top: 5px;
   }
   h1 {
-    font-size: 18px;
+    font-size: 16px;
+    margin-bottom: 5px;
   }
 }
 
 .team_contacts_wrapper {
-  grid-area: team_contacts_wrapper;
+  grid-area: 5 / 1 / 6 / 3;
   @include flex-center;
 }
 
 .team_manager_wrapper {
-  grid-area: team_manager_wrapper;
+  grid-area: 2 / 1 / 3 / 2;
   width: 80%;
   height: 80%;
   display: flex;
   justify-content: center;
-  margin: 30px 30px 30px 20px;
+  margin-left: 20px;
   .team_manager_photo {
     width: 30px;
     height: 30px;
     border-radius: 50px;
-    margin-bottom: 5px;
     background-color: gray;
+    margin-bottom: 3px;
   }
   .team_manager_title {
     h4 {
@@ -72,18 +68,17 @@
 }
 
 .team_supervisor_wrapper {
-  grid-area: team_supervisor_wrapper;
+  grid-area: 2 / 2 / 3 / 3;
   width: 80%;
   height: 80%;
-  margin: 30px 0px 0px 0px;
   display: flex;
   justify-content: center;
   .team_supervisor_photo {
     width: 30px;
     height: 30px;
-    background-color: gray;
     border-radius: 50px;
-    margin-bottom: 5px;
+    background-color: gray;
+    margin-bottom: 3px;
   }
   .team_supervisor_title {
     h4 {
@@ -94,20 +89,19 @@
   }
 }
 
-.team_it_one {
-  grid-area: team_it_one;
+.team_it_one_wrapper {
+  grid-area: 3 / 1 / 4 / 2;
   width: 80%;
   height: 80%;
-  margin: 0px 20px;
   display: flex;
-  justify-content: space-around;
-
+  justify-content: center;
+  margin-left: 20px;
   .team_it_one_photo {
     width: 30px;
     height: 30px;
-    background-color: gray;
     border-radius: 50px;
-    margin-bottom: 5px;
+    background-color: gray;
+    margin-bottom: 3px;
   }
   .team_it_one_title {
     h4 {
@@ -118,20 +112,18 @@
   }
 }
 
-.team_it_two {
-  grid-area: team_it_two;
+.team_it_two_wrapper {
+  grid-area: 3 / 2 / 4 / 3;
   width: 80%;
   height: 80%;
   display: flex;
   justify-content: center;
-  margin: 2px 0px 20px 0px;
-
   .team_it_two_photo {
     width: 30px;
     height: 30px;
-    background-color: gray;
     border-radius: 50px;
-    margin-bottom: 5px;
+    background-color: gray;
+    margin-bottom: 3px;
   }
   .team_it_two_title {
     h4 {
